elearningProject/force-app/main/default/objects/Question_s_Answer__c/Question_s_Answer__c.object-meta.xml
<CustomObject>
    <label>Question&apos;s Answer</label>
    <nameField>
        <displayFormat>OF-{0000}</displayFormat>
        <label>Question&apos;s Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question&apos;s Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>