elearningProject/force-app/main/default/objects/Question_s_Answer__c/fields/AnswerIsRight__c.field-meta.xml
<CustomField>
    <fullName>AnswerIsRight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AnswerIsRight</label>
    <type>Checkbox</type>
</CustomField>