elearningProject/force-app/main/default/objects/Question_s_Answer__c/fields/Option__c.field-meta.xml
<CustomField>
    <fullName>Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Option</label>
    <referenceTo>Option__c</referenceTo>
    <relationshipLabel>Question&apos;s Answers</relationshipLabel>
    <relationshipName>Question_s_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>