elearningProject/force-app/main/default/objects/Question_s_Answer__c/fields/Unit_progress__c.field-meta.xml
<CustomField>
    <fullName>Unit_progress__c</fullName>
    <label>Unit progress</label>
    <referenceTo>Unit_progress__c</referenceTo>
    <relationshipLabel>Question&apos;s Answers</relationshipLabel>
    <relationshipName>Question_s_Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>